@@ -14,8 +14,9 @@ import com.dnd.ground.domain.matrix.service.RankService;
 import com.dnd.ground.domain.user.User;
 import com.dnd.ground.domain.user.dto.UserResponseDto;
 import com.dnd.ground.domain.user.repository.UserRepository;
+import com.dnd.ground.global.util.RequirementUtil;
 import com.dnd.ground.global.exception.*;
-import com.dnd.ground.global.notification.NotificationForm;
+import com.dnd.ground.global.notification.dto.NotificationForm;
 import com.dnd.ground.global.notification.NotificationMessage;
 import com.dnd.ground.global.util.UuidUtil;
 import lombok.RequiredArgsConstructor;
@@ -33,9 +34,11 @@ import java.util.stream.Collectors;
  * @author 박찬호
  * @description 챌린지와 관련된 서비스의 역할을 분리한 구현체
  * @since 2022-08-03
- * @updated 1.푸시 알람의 화면 네비게이팅을 위한 챌린지 UUID 추가
- *          2.챌린지 상세보기: 지도 API의 응답을 회원의 순서에 맞춰 정렬
- *          - 2023.04.10
+ * @updated 1.챌린지 상세조회 반환할 때, center(latitude, longitude) 추가. (영역이 가장 많은 운동 기록의 가운데)
+ *          2.챌린지 상태변경 시 최대 개수를 넘지 않도록 예외처리
+ *          3.회원 탈퇴 API 구현 - 해당 멤버를 삭제된 유저로 변환
+ *          4. 회원 탈퇴 API 구현 - 참여 중인 챌린지를 삭제된 유저로 변환
+ *          - 2023.05.22 박찬호
  */
 
 @Slf4j
@@ -61,7 +64,7 @@ public class ChallengeServiceImpl implements ChallengeService {
         //진행 중인 챌린지 개수를 비롯한 필요한 데이터 조회 및 Validation
         Set<String> members = requestDto.getFriends();
         members.add(requestDto.getNickname()); // 주최자 추가
-        Map<User, Long> challengeCountMap = challengeRepository.findUsersProgressChallengeCount(members);
+        Map<User, Long> challengeCountMap = challengeRepository.findUsersJoinChallengeCount(members);
 
         //조회해온 멤버의 수가 맞지 않는 경우(닉네임이 올바르지 않음)
         if (challengeCountMap.size() != members.size()) {
@@ -96,7 +99,7 @@ public class ChallengeServiceImpl implements ChallengeService {
         List<UserResponseDto.UInfo> membersInfo = new ArrayList<>();
 
         //주최자 관계 생성
-        int colorIdx = (int) (challengeCountMap.get(master)%MAX_CHALLENGE_COUNT);
+        int colorIdx = (int) (challengeCountMap.get(master) % MAX_CHALLENGE_COUNT);
         userChallengeRepository.save(new UserChallenge(challenge, master, color[colorIdx], ChallengeStatus.MASTER));
         challengeCountMap.remove(master);
 
@@ -104,7 +107,7 @@ public class ChallengeServiceImpl implements ChallengeService {
         for (Map.Entry<User, Long> entry : challengeCountMap.entrySet()) {
             User member = entry.getKey();
             if (entry.getValue() <= MAX_CHALLENGE_COUNT) {
-                colorIdx = (int) (challengeCountMap.get(member)%MAX_CHALLENGE_COUNT);
+                colorIdx = (int) (challengeCountMap.get(member) % MAX_CHALLENGE_COUNT);
                 userChallengeRepository.save(new UserChallenge(challenge, member, color[colorIdx], ChallengeStatus.WAIT));
                 membersInfo.add(new UserResponseDto.UInfo(member.getNickname(), member.getPicturePath()));
             } else {
@@ -119,11 +122,13 @@ public class ChallengeServiceImpl implements ChallengeService {
         //푸시 알람 발송
         pushNotificationPublisher.publishEvent(
                 new NotificationForm(
-                        List.copyOf(challengeCountMap.keySet()),
+                        new ArrayList<>(challengeCountMap.keySet()),
                         List.of(master.getNickname()),
                         List.of(challenge.getName()),
                         NotificationMessage.CHALLENGE_RECEIVED_REQUEST,
-                        Map.of(NOTI_PARAM_CHALLENGE_UUID, UuidUtil.bytesToHex(challenge.getUuid()))
+                        new HashMap<>(){{
+                            put(NOTI_PARAM_CHALLENGE_UUID, UuidUtil.bytesToHex(challenge.getUuid()));
+                        }}
                 )
         );
 
@@ -140,6 +145,8 @@ public class ChallengeServiceImpl implements ChallengeService {
     /*유저-챌린지 상태 변경*/
     @Transactional
     public ChallengeResponseDto.Status changeUserChallengeStatus(ChallengeRequestDto.CInfo requestDto, ChallengeStatus status) {
+        User user = userRepository.findByNickname(requestDto.getNickname())
+                .orElseThrow(() -> new UserException(ExceptionCodeSet.USER_NOT_FOUND));
         UserChallenge userChallenge = challengeRepository.findUC(requestDto.getNickname(), requestDto.getUuid());
 
         if (userChallenge == null) throw new ChallengeException(ExceptionCodeSet.NOT_FOUND_UC);
@@ -147,21 +154,26 @@ public class ChallengeServiceImpl implements ChallengeService {
             throw new ChallengeException(ExceptionCodeSet.MASTER_STATUS_NOT_CHANGE, requestDto.getNickname());
         }
 
+        if (status == ChallengeStatus.READY && MAX_CHALLENGE_COUNT < challengeRepository.findUserJoinChallengeCount(user)) {
+            throw new ChallengeException(ExceptionCodeSet.CHALLENGE_EXCEED);
+        }
+
         //상태 변경
         userChallenge.changeStatus(status);
 
         //푸시 알람 발송
-        if (status.equals(ChallengeStatus.PROGRESS)) {
+        if (status.equals(ChallengeStatus.READY)) {
             User master = userChallengeRepository.findMasterInChallenge(UuidUtil.hexToBytes(requestDto.getUuid()));
-            User user = userChallenge.getUser();
             pushNotificationPublisher.publishEvent(
                     new NotificationForm(
-                            List.of(master),
+                            new ArrayList<>(Arrays.asList(master)),
                             List.of(user.getNickname()),
                             List.of(user.getNickname()),
                             NotificationMessage.CHALLENGE_ACCEPTED,
-                            Map.of(NOTI_PARAM_CHALLENGE_UUID, requestDto.getUuid())
-                            )
+                            new HashMap<>(){{
+                                put(NOTI_PARAM_CHALLENGE_UUID, requestDto.getUuid());
+                            }}
+                    )
             );
         }
 
@@ -173,7 +185,7 @@ public class ChallengeServiceImpl implements ChallengeService {
         User user = userRepository.findByNickname(nickname)
                 .orElseThrow(() -> new UserException(ExceptionCodeSet.USER_NOT_FOUND));
 
-        List<Challenge> challenges = challengeRepository.findChallengesByCond(new ChallengeCond(user, ChallengeStatus.WAIT));
+        List<Challenge> challenges = challengeRepository.findChallengesByCond(new ChallengeCond(user, List.of(ChallengeStatus.WAIT)));
         List<ChallengeResponseDto.Invite> response = new ArrayList<>();
 
         for (Challenge challenge : challenges) {
@@ -199,8 +211,8 @@ public class ChallengeServiceImpl implements ChallengeService {
         User user = userRepository.findByNickname(nickname)
                 .orElseThrow(() -> new UserException(ExceptionCodeSet.USER_NOT_FOUND));
 
-        Map<Challenge, List<UCDto.UCInfo>> challengesInfo = challengeRepository.findUCInChallenge(new ChallengeCond(user, ChallengeStatus.WAIT));
-        Map<Challenge, ChallengeColor> colorInfo = challengeRepository.findChallengesColor(new ChallengeCond(user, ChallengeStatus.WAIT));
+        Map<Challenge, List<UCDto.UCInfo>> challengesInfo = challengeRepository.findUCInChallenge(new ChallengeCond(user, List.of(ChallengeStatus.READY, ChallengeStatus.MASTER)));
+        Map<Challenge, ChallengeColor> colorInfo = challengeRepository.findChallengesColor(new ChallengeCond(user, List.of(ChallengeStatus.READY, ChallengeStatus.MASTER)));
 
         List<ChallengeResponseDto.Wait> response = new ArrayList<>();
 
@@ -213,7 +225,7 @@ public class ChallengeServiceImpl implements ChallengeService {
 
             for (UCDto.UCInfo uc : ucInfo) {
                 pictures.add(uc.getPicturePath());
-                if (uc.getStatus().equals(ChallengeStatus.PROGRESS) || uc.getStatus().equals(ChallengeStatus.MASTER))
+                if (uc.getStatus().equals(ChallengeStatus.READY) || uc.getStatus().equals(ChallengeStatus.MASTER))
                     readyCount++;
 
                 memberCount++;
@@ -241,8 +253,8 @@ public class ChallengeServiceImpl implements ChallengeService {
                 () -> new UserException(ExceptionCodeSet.USER_NOT_FOUND));
 
         List<ChallengeResponseDto.Progress> response = new ArrayList<>();
-        Map<Challenge, List<RankDto>> challengeMatrixRank = exerciseRecordRepository.findChallengeMatrixRank(user, ChallengeStatus.PROGRESS);
-        Map<Challenge, ChallengeColor> colors = challengeRepository.findChallengesColor(new ChallengeCond(user, ChallengeStatus.PROGRESS));
+        Map<Challenge, List<RankDto>> challengeMatrixRank = exerciseRecordRepository.findChallengeMatrixRank(user, List.of(ChallengeStatus.MASTER_PROGRESS, ChallengeStatus.PROGRESS));
+        Map<Challenge, ChallengeColor> colors = challengeRepository.findChallengesColor(new ChallengeCond(user, List.of(ChallengeStatus.MASTER_PROGRESS, ChallengeStatus.PROGRESS)));
 
         for (Map.Entry<Challenge, List<RankDto>> entry : challengeMatrixRank.entrySet()) {
             Challenge challenge = entry.getKey();
@@ -276,8 +288,8 @@ public class ChallengeServiceImpl implements ChallengeService {
         User friend = userRepository.findByNickname(friendNickname).orElseThrow(
                 () -> new FriendException(ExceptionCodeSet.FRIEND_NOT_FOUND));
 
-        Map<Challenge, List<RankDto>> challengesWithFriend = exerciseRecordRepository.findChallengeMatrixRankWithUsers(user, List.of(friend), List.of(ChallengeStatus.PROGRESS));
-        Map<Challenge, ChallengeColor> colors = challengeRepository.findChallengesColor(new ChallengeCond(user, ChallengeStatus.PROGRESS));
+        Map<Challenge, List<RankDto>> challengesWithFriend = exerciseRecordRepository.findChallengeMatrixRankWithUsers(user, List.of(friend), List.of(ChallengeStatus.MASTER_PROGRESS, ChallengeStatus.PROGRESS));
+        Map<Challenge, ChallengeColor> colors = challengeRepository.findChallengesColor(new ChallengeCond(user, List.of(ChallengeStatus.MASTER_PROGRESS, ChallengeStatus.PROGRESS)));
         List<ChallengeResponseDto.Progress> response = new ArrayList<>();
 
         for (Map.Entry<Challenge, List<RankDto>> entry : challengesWithFriend.entrySet()) {
@@ -305,8 +317,8 @@ public class ChallengeServiceImpl implements ChallengeService {
 
         List<ChallengeResponseDto.Done> response = new ArrayList<>();
 
-        Map<Challenge, List<RankDto>> challengeMatrixRank = exerciseRecordRepository.findChallengeMatrixRank(user, ChallengeStatus.DONE);
-        Map<Challenge, ChallengeColor> colors = challengeRepository.findChallengesColor(new ChallengeCond(user, ChallengeStatus.DONE));
+        Map<Challenge, List<RankDto>> challengeMatrixRank = exerciseRecordRepository.findChallengeMatrixRank(user, List.of(ChallengeStatus.MASTER_DONE, ChallengeStatus.DONE));
+        Map<Challenge, ChallengeColor> colors = challengeRepository.findChallengesColor(new ChallengeCond(user, List.of(ChallengeStatus.MASTER_DONE, ChallengeStatus.DONE)));
 
         for (Map.Entry<Challenge, List<RankDto>> entry : challengeMatrixRank.entrySet()) {
             Challenge challenge = entry.getKey();
@@ -340,7 +352,7 @@ public class ChallengeServiceImpl implements ChallengeService {
         Challenge challenge = challengeRepository.findByUuid(UuidUtil.hexToBytes(request.getUuid()))
                 .orElseThrow(() -> new ChallengeException(ExceptionCodeSet.CHALLENGE_NOT_FOUND));
 
-        Map<Challenge, ChallengeColor> colors = challengeRepository.findChallengesColor(new ChallengeCond(user, ChallengeStatus.WAIT));
+        Map<Challenge, ChallengeColor> colors = challengeRepository.findChallengesColor(new ChallengeCond(user, List.of(ChallengeStatus.WAIT)));
         List<UserChallenge> ucList = userChallengeRepository.findByChallenge(challenge);
 
         List<UCDto.UCInfo> infos = new ArrayList<>();
@@ -367,8 +379,8 @@ public class ChallengeServiceImpl implements ChallengeService {
                 .build();
     }
 
-    /*진행 중인 챌린지 상세 조회*/
-    public ChallengeResponseDto.ProgressDetail getDetailProgress(ChallengeRequestDto.CInfo request) {
+    /*진행 중, 완료된 챌린지 상세 조회*/
+    public ChallengeResponseDto.Detail getDetailProgressOrDone(ChallengeRequestDto.CInfo request) {
         User user = userRepository.findByNickname(request.getNickname())
                 .orElseThrow(() -> new UserException(ExceptionCodeSet.USER_NOT_FOUND));
 
@@ -378,31 +390,43 @@ public class ChallengeServiceImpl implements ChallengeService {
         //개인 기록 계산 및 영역 저장
         LocalDateTime started = challenge.getStarted();
         LocalDateTime ended = challenge.getEnded();
-        int distance = 0; //거리
-        int exerciseTime = 0; //운동시간
-        int stepCount = 0; //걸음수
+        int distance = 0;
+        int exerciseTime = 0;
+        int stepCount = 0;
+        Double latitude = null;
+        Double longitude = null;
 
         Map<ExerciseRecord, List<Location>> recordWithLocation = exerciseRecordRepository.findRecordWithLocation(user, started, ended);
         List<Location> matrices = new ArrayList<>();
+        int biggestSize = Integer.MIN_VALUE;
 
         for (Map.Entry<ExerciseRecord, List<Location>> entry : recordWithLocation.entrySet()) {
             ExerciseRecord record = entry.getKey();
+            List<Location> locations = entry.getValue();
 
             distance += record.getDistance();
             exerciseTime += record.getExerciseTime();
             stepCount += record.getStepCount();
 
-            matrices.addAll(entry.getValue());
+            matrices.addAll(locations);
+
+            if (biggestSize < locations.size()) {
+                biggestSize = locations.size();
+                int center = locations.size() / 2;
+
+                latitude = locations.get(center).getLatitude();
+                longitude = locations.get(center).getLongitude();
+            }
         }
 
         //랭킹 계산
-        List<User> members = userChallengeRepository.findChallengeUsers(challenge); //본인 포함 챌린지에 참여하는 인원들
+        List<User> members = userChallengeRepository.findMembers(challenge); //본인 포함 챌린지에 참여하는 인원들
         if (!members.contains(user)) throw new ChallengeException(ExceptionCodeSet.USER_CHALLENGE_NOT_FOUND); //참여하는 챌린지가 아니면 예외처리
 
         Map<Challenge, List<RankDto>> challengeMatrixRankWithMembers = exerciseRecordRepository.findChallengeMatrixRankWithUsers(user, members, List.of(ChallengeStatus.PROGRESS, ChallengeStatus.DONE));
         List<UserResponseDto.Ranking> rankings = rankService.calculateUsersRank(challengeMatrixRankWithMembers.get(challenge));
 
-        return ChallengeResponseDto.ProgressDetail.builder()
+        return ChallengeResponseDto.Detail.builder()
                 .name(challenge.getName())
                 .uuid(UuidUtil.bytesToHex(challenge.getUuid()))
                 .type(challenge.getType())
@@ -414,6 +438,8 @@ public class ChallengeServiceImpl implements ChallengeService {
                 .distance(distance)
                 .exerciseTime(exerciseTime)
                 .stepCount(stepCount)
+                .latitude(latitude)
+                .longitude(longitude)
                 .build();
     }
 
@@ -442,12 +468,12 @@ public class ChallengeServiceImpl implements ChallengeService {
     }
 
     /*챌린지 상세보기: 지도*/
-    public ChallengeMapResponseDto.Detail getChallengeDetailMap(String uuid, String nickname) {
+    public ChallengeMapResponseDto.DetailMap getChallengeDetailMap(String uuid, String nickname, Double spanDelta, Location center) {
         Challenge challenge = challengeRepository.findByUuid(UuidUtil.hexToBytes(uuid))
                 .orElseThrow(() -> new ChallengeException(ExceptionCodeSet.CHALLENGE_NOT_FOUND));
 
         //챌린지 참여 인원 조회
-        List<User> members = userChallengeRepository.findChallengeUsers(challenge);
+        List<User> members = userChallengeRepository.findMembers(challenge);
 
         //랭킹 계산
         List<RankDto> rankByChallenge = exerciseRecordRepository.findRankByChallenge(challenge);
@@ -461,20 +487,20 @@ public class ChallengeServiceImpl implements ChallengeService {
 
         int i=0;
         for (User member : members) {
-            List<Location> matrices = matrixRepository.findMatrixList(new MatrixCond(member, challenge.getStarted(), challenge.getEnded()));
+            List<Location> matrices = matrixRepository.findMatrixList(new MatrixCond(member, challenge.getStarted(), challenge.getEnded(), spanDelta, center));
             if (member.getNickname().equals(nickname)) {
                 matrixList.add(0,
-                        new ChallengeMapResponseDto.UserMapInfo(color[MAX_CHALLENGE_MEMBER_COUNT], member.getLatitude(), member.getLongitude(), matrices, member.getPicturePath())
+                        new ChallengeMapResponseDto.UserMapInfo(nickname, color[MAX_CHALLENGE_MEMBER_COUNT], member.getLatitude(), member.getLongitude(), matrices, member.getPicturePath())
                 );
             } else {
                 matrixList.add(
-                        new ChallengeMapResponseDto.UserMapInfo(color[i], member.getLatitude(), member.getLongitude(), matrices, member.getPicturePath())
+                        new ChallengeMapResponseDto.UserMapInfo(member.getNickname(), color[i], member.getLatitude(), member.getLongitude(), matrices, member.getPicturePath())
                 );
                 i++;
             }
         }
 
-        return new ChallengeMapResponseDto.Detail(matrixList, rankings);
+        return new ChallengeMapResponseDto.DetailMap(matrixList, rankings);
     }
 
     /*챌린지 삭제*/
@@ -496,6 +522,40 @@ public class ChallengeServiceImpl implements ChallengeService {
             userChallengeRepository.deleteAll(userChallenges);
             challengeRepository.delete(challenge);
             return true;
+        }
+    }
+
+    /**
+     * 회원 탈퇴의 경우, 1명만 남아도 챌린지가 진행된다는 요구사항에 따라 (알 수 없음) 회원으로 변경한다.
+     * 모든 회원이 탈퇴하면 챌린지가 삭제된다.
+     * @param user
+     */
+    @Override
+    @Transactional
+    public void convertDeleteUser(User user) {
+        List<ChallengeUcsDto> challengeUcs = challengeRepository.findChallengeUcs(user);
+        User deleteUser = RequirementUtil.getDeleteUser();
+        user.clearChallenges();
+
+        for (ChallengeUcsDto challengeUc : challengeUcs) {
+            Challenge challenge = challengeUc.getChallenge();
+            List<UserChallenge> ucs = challengeUc.getUcs();
+
+            int cnt = 1;
+            for (UserChallenge uc : ucs) {
+                User member = uc.getUser();
+
+                if (Objects.equals(member,user)) {
+                    uc.changeUser(deleteUser);
+                } else if (Objects.equals(member.getId(), deleteUser.getId())) {
+                    cnt++;
+                }
+            }
+
+            if (ucs.size() == 1 || cnt == ucs.size()) {
+                userChallengeRepository.deleteAll(ucs);
+                challengeRepository.delete(challenge);
+            }
         }
     }
 }
